# gen-cov-abm

./: .gitignore  README.md  README.txt  calibnn.sbatch  calibnn2.sbatch  calibnn_baseline.sbatch  compute_distance_matrix.py  data_explore.ipynb  data_vis.ipynb  embed-sequences.py  embed_sequences.sh  error.out  example.py  log.out  metrics.sbatch  metrics_baseline.sbatch  protein_mutations_doc.md  pyproject.toml  requirements.txt  visualize_distance_matrix.py
Baseline_Results/: metrics_summary_jun21.csv
Baseline_Results/calib_params_jul21/: 25003_202126-202130.pt  25005_202126-202130.pt  25013_202126-202130.pt  25023_202126-202130.pt  25025_202126-202130.pt  (+1 more)
Results/: metrics_summary.csv  metrics_summary_calib.csv  metrics_summary_jul21.csv  metrics_summary_jun21.csv
baseline_covid_abm/: run_calib_nn.py  simulator.py
covid_abm/: __init__.py  main.py  metrics.py  run_calib_nn.py  run_metrics.py  simulator.py
curled_data_final/: get-data.sh  ma_available.json
data/: n_sequence_ids.txt  s_sequence_ids.txt
data_json/: compress.py  decompress.py
logs/: calibnn_37039425.err  calibnn_37044672.err  calibnn_37044672.out  calibnn_37583583.err  calibnn_37583583.out  calibnn_gpu_37583793.err  calibnn_gpu_37583793.out  metrics_37076719.err  metrics_37076719.out  metrics_37076782.out  metrics_37584549.out
notebooks/: embed-sequences.ipynb  explore-data.ipynb  extract-evo-distance.ipynb  extract-sequences.ipynb  extract_sequences.ipynb  sample-sequences-for-agents.ipynb  visualize-embeddings.ipynb
notes/: TODO.md  clade_counts_by_county.tex  protein_mutations_doc.md
(+251 files in other folders)
