[project]
name = "gen-cov-abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fair-esm>=2.0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "nexusformat>=2.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sklearn>=0.0.post12",
    "torch>=2.9.1",
    "toytree>=3.0.10",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
    "omegaconf>=2.3.0",
    "asyncio>=3.4.3",
    "torch>=2.1.2",
    "torch_geometric>=2.5.3",
    "langchain>=0.2.3",
    "langchain-openai>=0.1.8",
    "numpy>=1.24.3",
    "pandas>=1.5.0",
    "networkx>=3.0",
    "tqdm>=4.66.4",
    "dspy>=0.1.5",
    "dask>=2024.12.1",
    "epiweeks",
    "scipy"
]
